<resources>
    <string name="app_name">Mustika Absensi</string>
    <string name="loading">Loading ...</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="info">Info</string>
    <string name="beranda">Beranda</string>
    <string name="profil">Profil</string>
    <string name="nama_divisi">Nama Divisi</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="nama_level">Nama Level</string>
    <string name="nama">Nama</string>
    <string name="telepon">Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="divisi">Divisi</string>
    <string name="jabatan">Jabatan</string>
    <string name="cari">Cari..</string>
</resources>